--- a/Productos.html
+++ b/Productos.html
@@ -11,7 +11,7 @@
     
         <body style="background-color: rgb(173, 200, 218); color: rgb(253, 9, 9);" >
             <div id="Inicio">
-                <h1>Tu coche ideal</h1><a href="Inicio.html"><img style="border-radius: 70px;" width="200px" src="Logo.jpg" alt="Venta de carros"></a>
+                <h1>Tu coche ideal</h1><a href="index.html"><img style="border-radius: 70px;" width="200px" src="Logo.jpg" alt="Venta de carros"></a>
             </div>
             <br>
             <header>
@@ -19,7 +19,7 @@
                     <nav id="menu">
                         <ul>
                             <div style="text-align: right;">
-                                <li><b><a href="Index.html" style="color: rgb(251, 255, 0);">Inicio</a></b></li>
+                                <li><b><a href="index.html" style="color: rgb(251, 255, 0);">Inicio</a></b></li>
                                 <li><a href="Productos.html" style="color: rgb(251, 255, 0);">Productos</a></li>
                             </div>
                         </ul>
