--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                                         </li>
                                     </ul>
                                     </li>
-                                        <li><a href="Productos.html" style="color: rgb(251, 255, 0);">Productos</a></li>
+                                        <li><a href="Productos.html" style="color: rgb(251, 255, 0);">Productos</a>
+                                    </li>
                                     </div>
                             </ul>
                         </nav>
