--- a/Productos.html
+++ b/Productos.html
@@ -21,7 +21,7 @@
                             <div style="text-align: right;">
                                 <li><b><a href="index.html" style="color: rgb(251, 255, 0);">Inicio</a></b></li>
                                 <li><a href="Productos.html" style="color: rgb(251, 255, 0);">Productos</a></li>
-                                <li><a href="Nuevo.html" style="color: rgb(251, 255, 0);">Productos</a></li>
+                                <li><a href="nuevo.html" style="color: rgb(251, 255, 0);">Productos</a></li>
                             </div>
                         </ul>
                     </nav>
